DevOps-Project-41/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ai-devsecops
  labels:
    app.kubernetes.io/part-of: ai-native-devsecops-platform
