DevOps-Project-41/k8s/base/worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-worker
  namespace: ai-devsecops
  labels:
    app.kubernetes.io/name: ai-worker
    app.kubernetes.io/part-of: ai-native-devsecops-platform
    app.kubernetes.io/component: worker
spec:
  selector:
    app.kubernetes.io/name: ai-worker
  ports:
    - name: metrics
      port: 9090
      targetPort: 9090
      protocol: TCP
  type: ClusterIP
